--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -29,3 +29,5 @@ add_subdirectory(src/tmp117_handler)
 add_subdirectory(src/bme280_handler)
 add_subdirectory(src/lis2dh12_handler)
 add_subdirectory(src/battery_handler)
+add_subdirectory(src/shtcx_handler)
+add_subdirectory(src/dps310_handler)
