--- a/boards/arm/nrf52833dk_nrf52833/nrf52833dk_nrf52833.dts
+++ b/boards/arm/nrf52833dk_nrf52833/nrf52833dk_nrf52833.dts
@@ -1,6 +1,6 @@
 /*
  * Copyright (c) 2019 Nordic Semiconductor ASA
- *
+ * Modification  Lueger 12.12.2021
  * SPDX-License-Identifier: Apache-2.0
  */
 
@@ -32,16 +32,12 @@
 			gpios = <&gpio0 14 GPIO_ACTIVE_LOW>;
 			label = "Green LED 1";
 		};
-		/*led2: led_2 {
-			gpios = <&gpio0 15 GPIO_ACTIVE_LOW>;
-			label = "Green LED 2";
-		};*/
 	};
 
 	pwmleds {
 		compatible = "pwm-leds";
 		pwm_led0: pwm_led_0 {
-		pwms = <&pwm0 13>;
+			pwms = <&pwm0 17>;
 		};
 	};
 
@@ -55,75 +51,19 @@
 			gpios = <&gpio0 12 (GPIO_PULL_UP | GPIO_ACTIVE_LOW)>;
 			label = "Push button switch 1";
 		};
-		button2: button_2 {
-			gpios = <&gpio0 24 (GPIO_PULL_UP | GPIO_ACTIVE_LOW)>;
-			label = "Push button switch 2";
-		};
-		button3: button_3 {
-			gpios = <&gpio0 25 (GPIO_PULL_UP | GPIO_ACTIVE_LOW)>;
-			label = "Push button switch 3";
-		};
-	};
-
-/*	sensor_power {
-		compatible = "gpio-keys";
-		snp1: sensor_power_1 {
-			gpios = <&gpio0 19 GPIO_ACTIVE_LOW>;
-			label = "Power 1";
-		};
-		snp2: sensor_power_2 {
-			gpios = <&gpio0 07 GPIO_ACTIVE_LOW>;
-			label = "Power 2";
-		};
-	};
-
-*/
-
-	arduino_header: connector {
-		compatible = "arduino-header-r3";
-		#gpio-cells = <2>;
-		gpio-map-mask = <0xffffffff 0xffffffc0>;
-		gpio-map-pass-thru = <0 0x3f>;
-		gpio-map = <0 0 &gpio0 3 0>,	/* A0 */
-			   <1 0 &gpio0 4 0>,	/* A1 */
-			   <2 0 &gpio0 28 0>,	/* A2 */
-			   <3 0 &gpio0 29 0>,	/* A3 */
-			   <4 0 &gpio0 30 0>,	/* A4 */
-			   <5 0 &gpio0 31 0>,	/* A5 */
-			   <6 0 &gpio1 1 0>,	/* D0 */
-			   <7 0 &gpio1 2 0>,	/* D1 */
-			   <8 0 &gpio1 3 0>,	/* D2 */
-			   <9 0 &gpio1 4 0>,	/* D3 */
-			   <10 0 &gpio1 5 0>,	/* D4 */
-			   <11 0 &gpio1 6 0>,	/* D5 */
-			   <12 0 &gpio1 7 0>,	/* D6 */
-			   <13 0 &gpio1 8 0>,	/* D7 */
-			   <14 0 &gpio0 17 0>,	/* D8 */
-			   <15 0 &gpio0 19 0>,	/* D9 */
-			   <16 0 &gpio0 20 0>,	/* D10 */
-			   <17 0 &gpio0 21 0>,	/* D11 */
-			   <18 0 &gpio0 22 0>,	/* D12 */
-			   <19 0 &gpio0 23 0>,	/* D13 */
-			   <20 0 &gpio0 26 0>,	/* D14 */
-			   <21 0 &gpio0 27 0>;	/* D15 */
+		
 	};
 
 	/* These aliases are provided for compatibility with samples */
 	aliases {
 		led0 = &led0;
 		led1 = &led1;
-		//led2 = &led2;
-		
 		pwm-led0 = &pwm_led0;
 		sw0 = &button0;
 		sw1 = &button1;
-		sw2 = &button2;
-		sw3 = &button3;
 		bootloader-led0 = &led0;
 		usbd0 = &usbd;
 		
-		//snp1 = &snp1;
-		//snp2 = &snp2;		
 		};
 };
 
@@ -153,44 +93,43 @@
 	cts-pin = <7>;
 };
 
+/*
 arduino_serial: &uart1 {
 	status = "okay";
 	current-speed = <115200>;
 	rx-pin = <33>;
 	tx-pin = <34>;
 };
-
+*/
 
 
 
 &pwm0 {
 	status = "okay";
-	ch0-pin = <13>;
+	ch0-pin = <19>;
 	ch0-inverted;
 };
 
 &spi0 {
 	compatible = "nordic,nrf-spi";
 	status = "okay";
-	sck-pin = <29>;
-	mosi-pin = <25>;
-	miso-pin = <28>;
-	cs-gpios = <&gpio0 3 GPIO_ACTIVE_LOW>, <&gpio0 8 GPIO_ACTIVE_LOW>;
+	
+	miso-pin = <31>;
+        sck-pin = <30>;
+        mosi-pin = <29>;
 
-	bme280@0 {
-		compatible = "bosch,bme280";
+	cs-gpios = <&gpio0 28 GPIO_ACTIVE_LOW>;
+        
+	ecg0:ti_ads1292@0 {
+		compatible = "ti,ads1292";
 		reg = <0>;
-		spi-max-frequency = <10000000>;
-		label= "BME280";
+		spi-max-frequency = <125000>;
+		label= "ADS1292";
+                supply-gpios = <&gpio0 16 GPIO_ACTIVE_LOW>;
+                int-gpios = <&gpio0 20 GPIO_ACTIVE_HIGH>;
+                start-gpios = <&gpio0 21 GPIO_ACTIVE_HIGH>;
 	};
 
-	lis2dh12: lis2dh12@1 {
-		compatible = "st,lis2dh", "st,lis2dh12";
-		reg = <1>;
-		spi-max-frequency = <10000000>;
-		irq-gpios =  <&gpio0 2 GPIO_ACTIVE_HIGH>, <&gpio0 6 GPIO_ACTIVE_HIGH>;
-		label = "LIS2DH12-ACCEL";
-	};
 };
 
 &i2c1 {
@@ -202,24 +141,9 @@ arduino_serial: &uart1 {
 		compatible = "ti,tmp117";
 		reg = <0x48>;
 		label = "TMP117";
-		//sd-gpios = <&gpio0 16 GPIO_ACTIVE_LOW>;
-	};
+		alert-gpios = <&gpio0 22 GPIO_ACTIVE_HIGH>;
+		supplyi2c-gpios = <&gpio0 15 GPIO_ACTIVE_LOW>;
 
-                ti_tmp116: ti_tmp116@49 {
-		compatible = "ti,tmp116";
-		reg = <0x49>;
-		label = "TMP116";
-		//sd-gpios = <&gpio0 16 GPIO_ACTIVE_LOW>;
-	};
-
-		sensirion_shtcx: shtcx@70 {
-		compatible = "sensirion,shtcx";
-		reg = <0x70>;
-		label = "SHTCX";
-		chip = "shtc3";
-		measure-mode = "normal";
-		//supply-gpios= <&gpio0 15 GPIO_ACTIVE_HIGH>;
-		//supply-gpios= <&gpio0 15 GPIO_ACTIVE_LOW>;
 	};
 };
 
