--- a/prj.conf
+++ b/prj.conf
@@ -19,7 +19,7 @@ CONFIG_SENSOR=y
 CONFIG_BME280=n
 CONFIG_SHTCX=n
 CONFIG_DPS310=n
-CONFIG_LIS2DH12=n
+CONFIG_LIS2DH12=y
 CONFIG_TMP117=y
 
 CONFIG_APPLICATION_DEFINED_SYSCALL=y
