--- a/boards/arm/nrf52833dk_nrf52833/nrf52833dk_nrf52833.dts
+++ b/boards/arm/nrf52833dk_nrf52833/nrf52833dk_nrf52833.dts
@@ -32,10 +32,7 @@
 			gpios = <&gpio0 14 GPIO_ACTIVE_LOW>;
 			label = "Green LED 1";
 		};
-		/*led2: led_2 {
-			gpios = <&gpio0 15 GPIO_ACTIVE_LOW>;
-			label = "Green LED 2";
-		};*/
+		
 	};
 
 	pwmleds {
@@ -55,14 +52,7 @@
 			gpios = <&gpio0 12 (GPIO_PULL_UP | GPIO_ACTIVE_LOW)>;
 			label = "Push button switch 1";
 		};
-		button2: button_2 {
-			gpios = <&gpio0 24 (GPIO_PULL_UP | GPIO_ACTIVE_LOW)>;
-			label = "Push button switch 2";
-		};
-		button3: button_3 {
-			gpios = <&gpio0 25 (GPIO_PULL_UP | GPIO_ACTIVE_LOW)>;
-			label = "Push button switch 3";
-		};
+	
 	};
 
 /*	sensor_power {
@@ -78,36 +68,6 @@
 	};
 
 */
-
-	arduino_header: connector {
-		compatible = "arduino-header-r3";
-		#gpio-cells = <2>;
-		gpio-map-mask = <0xffffffff 0xffffffc0>;
-		gpio-map-pass-thru = <0 0x3f>;
-		gpio-map = <0 0 &gpio0 3 0>,	/* A0 */
-			   <1 0 &gpio0 4 0>,	/* A1 */
-			   <2 0 &gpio0 28 0>,	/* A2 */
-			   <3 0 &gpio0 29 0>,	/* A3 */
-			   <4 0 &gpio0 30 0>,	/* A4 */
-			   <5 0 &gpio0 31 0>,	/* A5 */
-			   <6 0 &gpio1 1 0>,	/* D0 */
-			   <7 0 &gpio1 2 0>,	/* D1 */
-			   <8 0 &gpio1 3 0>,	/* D2 */
-			   <9 0 &gpio1 4 0>,	/* D3 */
-			   <10 0 &gpio1 5 0>,	/* D4 */
-			   <11 0 &gpio1 6 0>,	/* D5 */
-			   <12 0 &gpio1 7 0>,	/* D6 */
-			   <13 0 &gpio1 8 0>,	/* D7 */
-			   <14 0 &gpio0 17 0>,	/* D8 */
-			   <15 0 &gpio0 19 0>,	/* D9 */
-			   <16 0 &gpio0 20 0>,	/* D10 */
-			   <17 0 &gpio0 21 0>,	/* D11 */
-			   <18 0 &gpio0 22 0>,	/* D12 */
-			   <19 0 &gpio0 23 0>,	/* D13 */
-			   <20 0 &gpio0 26 0>,	/* D14 */
-			   <21 0 &gpio0 27 0>;	/* D15 */
-	};
-
 	/* These aliases are provided for compatibility with samples */
 	aliases {
 		led0 = &led0;
@@ -117,8 +77,6 @@
 		pwm-led0 = &pwm_led0;
 		sw0 = &button0;
 		sw1 = &button1;
-		sw2 = &button2;
-		sw3 = &button3;
 		bootloader-led0 = &led0;
 		usbd0 = &usbd;
 		
@@ -190,6 +148,7 @@ arduino_serial: &uart1 {
 		spi-max-frequency = <10000000>;
 		irq-gpios =  <&gpio0 2 GPIO_ACTIVE_HIGH>, <&gpio0 6 GPIO_ACTIVE_HIGH>;
 		label = "LIS2DH12-ACCEL";
+                supply-gpios = <&gpio0 16 GPIO_ACTIVE_LOW>;
 	};
 };
 
@@ -202,14 +161,8 @@ arduino_serial: &uart1 {
 		compatible = "ti,tmp117";
 		reg = <0x48>;
 		label = "TMP117";
-		//sd-gpios = <&gpio0 16 GPIO_ACTIVE_LOW>;
-	};
-
-                ti_tmp116: ti_tmp116@49 {
-		compatible = "ti,tmp116";
-		reg = <0x49>;
-		label = "TMP116";
-		//sd-gpios = <&gpio0 16 GPIO_ACTIVE_LOW>;
+		alert-gpios = <&gpio0 22 GPIO_ACTIVE_HIGH>;
+		supplyi2c-gpios = <&gpio0 15 GPIO_ACTIVE_LOW>;
 	};
 
 		sensirion_shtcx: shtcx@70 {
@@ -218,8 +171,8 @@ arduino_serial: &uart1 {
 		label = "SHTCX";
 		chip = "shtc3";
 		measure-mode = "normal";
-		//supply-gpios= <&gpio0 15 GPIO_ACTIVE_HIGH>;
-		//supply-gpios= <&gpio0 15 GPIO_ACTIVE_LOW>;
+		supplyi2c-gpios = <&gpio1 15 GPIO_ACTIVE_LOW>;
+
 	};
 };
 
