--- a/prj.conf
+++ b/prj.conf
@@ -17,7 +17,7 @@ CONFIG_SENSOR=y
 
 #Enable External Driver
 CONFIG_BME280=n
-CONFIG_SHTCX=n
+CONFIG_SHTC3=y
 CONFIG_DPS310=n
 CONFIG_LIS2DH12=y
 CONFIG_TMP117=y
