--- a/boards/arm/ruuvi_ruuvitag/ruuvi_ruuvitag.dts
+++ b/boards/arm/ruuvi_ruuvitag/ruuvi_ruuvitag.dts
@@ -93,7 +93,7 @@
 		spi-max-frequency = <10000000>;
 		irq-gpios =  <&gpio0 2 GPIO_ACTIVE_HIGH>, <&gpio0 6 GPIO_ACTIVE_HIGH>;
 		label = "LIS2DH12-ACCEL";
-		supply-gpios = <&gpio0 7 GPIO_ACTIVE_LOW>;
+		supply-gpios = <&gpio0 7 GPIO_ACTIVE_HIGH>;
 	};
 };
 &i2c1 {
@@ -107,7 +107,7 @@
 		reg = <0x48>;
 		label = "TMP117";
 		//alert-gpios = <&gpio0 16 GPIO_ACTIVE_HIGH>;
-		supplyi2c-gpios = <&gpio0 16 GPIO_ACTIVE_HIGH>;
+		supplyi2c-gpios = <&gpio0 12 GPIO_ACTIVE_HIGH>;
 	};
         	sensirion_shtc3: shtc3@70 {
 		compatible = "sensirion,shtc3";
@@ -115,7 +115,7 @@
 		label = "SHTC3";
 		chip = "shtc3";
 		measure-mode = "normal";
-		supplyi2c-gpios= <&gpio0 16 GPIO_ACTIVE_HIGH>;
+		supplyi2c-gpios= <&gpio0 12 GPIO_ACTIVE_HIGH>;
 	};
 };
 
