--- a/prj.conf
+++ b/prj.conf
@@ -1,5 +1,21 @@
+#
+# Copyright (c) 2018 Nordic Semiconductor
+#
+# SPDX-License-Identifier: LicenseRef-Nordic-5-Clause
+#
+
 # Enable rebooting
 CONFIG_REBOOT=y
+
+#Power Management
+CONFIG_BOARD_ENABLE_DCDC=y
+CONFIG_PM=y
+CONFIG_PM_DEVICE=y
+CONFIG_PM_DEVICE_RUNTIME=y
+
+#Enable Hardware Info - allows serial to be retrieved
+CONFIG_HWINFO=y
+CONFIG_HWINFO_NRF=y
 
 #Enable Peripheral Drivers
 CONFIG_SPI=y
@@ -8,30 +24,26 @@ CONFIG_GPIO=y
 CONFIG_ADC=y
 CONFIG_ADC_ASYNC=y
 
-#Enable Hardware Info - allows serial to be retrieved
-CONFIG_HWINFO=y
-CONFIG_HWINFO_NRF=y
 
 #Enable Sensors Drivers
 CONFIG_SENSOR=y
-
-#Enable External Driver
-CONFIG_BME280=n
-CONFIG_SHTC3=y
-CONFIG_DPS310=n
-CONFIG_LIS2DH12=y
 CONFIG_TMP117=y
+CONFIG_BME280=n
+CONFIG_SHTC3=n
+CONFIG_DPS310=n
+CONFIG_LIS2DH12=n
+
 
 CONFIG_APPLICATION_DEFINED_SYSCALL=y
 
 CONFIG_HEAP_MEM_POOL_SIZE=2048
 
+#Enable Bluetooth API's
 CONFIG_BT=y
 CONFIG_BT_BROADCASTER=y
 CONFIG_BT_PERIPHERAL=y
 CONFIG_BT_GATT_CLIENT=y
 CONFIG_BT_GATT_CACHING=n
-
 
 CONFIG_BT_DEVICE_NAME="Ruuvi"
 CONFIG_BT_DEVICE_APPEARANCE=833
@@ -59,7 +71,6 @@ CONFIG_SETTINGS=y
 # Enable the NUS service
 CONFIG_BT_NUS=n
 
-# NFC
 CONFIG_NFC_T2T_NRFXLIB=y
 CONFIG_NFC_NDEF=y
 CONFIG_NFC_NDEF_MSG=y
@@ -68,9 +79,6 @@ CONFIG_NFC_NDEF_TEXT_RECORD=y
 
 # Needed for full libC library
 CONFIG_NEWLIB_LIBC=y
-
-#Power Management
-CONFIG_BOARD_ENABLE_DCDC=y
 
 # Config logger
 CONFIG_LOG=y
@@ -85,8 +93,5 @@ CONFIG_SETTINGS_NONE=y
 #Increase Stack Size
 CONFIG_SYSTEM_WORKQUEUE_STACK_SIZE=4096
 
-CONFIG_PM=y
-CONFIG_PM_DEVICE=y
-CONFIG_PM_DEVICE_RUNTIME=y
-
-#Blank Line required for version to be added
+# Needed for full libC library
+CONFIG_NEWLIB_LIBC=y
