--- a/prj.conf
+++ b/prj.conf
@@ -27,11 +27,11 @@ CONFIG_ADC_ASYNC=y
 
 #Enable Sensors Drivers
 CONFIG_SENSOR=y
-CONFIG_TMP117=y
+CONFIG_TMP117=n
 CONFIG_BME280=n
-CONFIG_SHTC3=n
+CONFIG_SHTC3=y
 CONFIG_DPS310=n
-CONFIG_LIS2DH12=n
+CONFIG_LIS2DH12=y
 
 
 CONFIG_APPLICATION_DEFINED_SYSCALL=y
