--- a/boards/arm/ruuvi_ruuvitag/ruuvi_ruuvitag.dts
+++ b/boards/arm/ruuvi_ruuvitag/ruuvi_ruuvitag.dts
@@ -22,18 +22,18 @@
 		led0 = &led0;
 		led1 = &led1;
 		sw0 = &button0;
-		snp1 = &snp1;
-		snp2 = &snp2;
+		//snp1 = &snp1;
+		//snp2 = &snp2;
 	};
 
 	leds {
 		compatible = "gpio-leds";
 		led0: led_0 {
-			gpios = <&gpio0 24 GPIO_ACTIVE_LOW>; //17
+			gpios = <&gpio0 17 GPIO_ACTIVE_LOW>; //17
 			label = "Red LED 0";
 		};
 		led1: led_1 {
-			gpios = <&gpio0 25 GPIO_ACTIVE_LOW>; //
+			gpios = <&gpio0 19 GPIO_ACTIVE_LOW>; //
 			label = "Green LED 1";
 		};
 	};
@@ -41,12 +41,12 @@
 	buttons {
 		compatible = "gpio-keys";
 		button0: button_0 {
-			gpios = <&gpio0 13 (GPIO_PULL_UP | GPIO_ACTIVE_LOW)>;
+			gpios = <&gpio0 14 (GPIO_PULL_UP | GPIO_ACTIVE_LOW)>;
 			label = "Push button switch 0";
 		};
 	};
 
-	sensor_power {
+	/*sensor_power {
 		compatible = "gpio-keys";
 		snp1: sensor_power_1 {
 			gpios = <&gpio0 12 GPIO_ACTIVE_LOW>;
@@ -57,7 +57,7 @@
 			label = "Power 2";
 		};
 	};
-
+*/
 };
 
 &adc {
@@ -107,7 +107,7 @@
 		reg = <0x48>;
 		label = "TMP117";
 		//alert-gpios = <&gpio0 16 GPIO_ACTIVE_HIGH>;
-		supplyi2c-gpios = <&gpio0 12 GPIO_ACTIVE_HIGH>;
+		supplyi2c-gpios = <&gpio0 13 GPIO_ACTIVE_HIGH>;
 	};
         	sensirion_shtc3: shtc3@70 {
 		compatible = "sensirion,shtc3";
@@ -115,7 +115,7 @@
 		label = "SHTC3";
 		chip = "shtc3";
 		measure-mode = "normal";
-		supplyi2c-gpios= <&gpio0 12 GPIO_ACTIVE_HIGH>;
+		supplyi2c-gpios= <&gpio0 13 GPIO_ACTIVE_HIGH>;
 	};
 };
 
